@@ -1,8 +1,8 @@
 Package: mclogit
 Type: Package
 Title: Mixed Conditional Logit
-Version: 0.3
-Date: 2014-08-23
+Version: 0.3-1
+Date: 2014-10-13
 Author: Martin Elff
 Maintainer: Martin Elff <elff@gmx.com>
 Description: This packages provides a function to estimate parameters for 
@@ -12,5 +12,6 @@ Description: This packages provides a function to estimate parameters for
   The current implementation of random effects is limited to
   the PQL technique, which requires large cluster sizes.
 License: GPL-2
-Depends: stats, memisc, Matrix
+Depends: stats, Matrix
+Enhances: memisc
 LazyLoad: Yes
